# vault

./: .gitignore  README.md  SPEC.md  STATUS.md  __init__.py  backup.py  cli.py  config.py  engine.py  keymanager.py  pyproject.toml  transport.py  vault.py  vault_mcp_server.py
tests/: test_engine.py  test_integration.py  test_keymanager.py  test_vault.py
